--- a/thesis/02-factorization/02-AdiabaticFactorization.tex
+++ b/thesis/02-factorization/02-AdiabaticFactorization.tex
@@ -1,6 +1,8 @@
 \section{Adiabatic Factorization Algorithm}
 \label{Section:AFA}
 
+It is worth to start this section by stating something quite relevant about adiabatic factorization and Shor's algorithm. While the adiabatic approach allows us to implement the factorization, which is also the main goal of Shor's algorithm, it does not mean we are implementing the Shor's algorithm adiabatically. For this reason, we refer to this method as \textit{adiabatic factorization}.
+
 The problem of integer factorization can be formulated as a constrained search over pairs of natural numbers $p$ and $q$ such that
 \begin{equation}
 	N = p \times q.
@@ -58,19 +60,19 @@ Following the adiabatic theorem, if the evolution from $\hat{H}_0$ to $\hat{H}_\
 
 Despite its conceptual clarity, the Hamiltonian $\hat{H}_\mathrm{QP}$ includes high-order multiqubit interactions, such as three- and four-body terms of the form $\hat{\sigma}_\ell^z \hat{\sigma}_m^z \hat{\sigma}_k^z$ and $\hat{\sigma}_\ell^z \hat{\sigma}_m^z \hat{\sigma}_k^z \hat{\sigma}_n^z$. These many-body interactions are difficult to implement, since they require one to bring all involved qubits together and make them interact in a controlled way, resulting in prone-to-error processes. The need to avoid those terms is of pivotal interest to provide efficient quantum algorithms.
 
-\subsection{Digitized Adiabatic Quantum Factorization}
+\section{Digitized Adiabatic Quantum Factorization}
 Although the adiabatic model is often formulated in terms of continuous time evolution, it can be simulated efficiently using gate-based quantum computation through a process known as digitization.
 
 In the digitized approach, the continuous adiabatic evolution governed by a time-dependent Hamiltonian as of Eq.~\ref{eq:adiabatic_passage} is approximated by a sequence of quantum gates through trotterization, breaking the total evolution into small time slices. Each slice is implemented as a layer in a quantum circuit, simulating the adiabatic trajectory step by step.
 
-This method was successfully demonstrated by Hegade et al., where the authors implemented a digitized adiabatic factorization algorithm on superconducting hardware. They successfully factorized numbers $N=21$, $N=91$, and $N=217$, and also proved enhancements by introducing a counter-diabatic driving term~\cite{hegade_digitized_2021}.
+This method was successfully demonstrated by Hegade et al.~\cite{hegade_digitized_2021}, where the authors implemented a digitized adiabatic factorization algorithm on superconducting hardware. They successfully factorized numbers $N=21$, $N=91$, and $N=217$, and also proved enhancements by introducing an additional layer in the algorithm due to application of counter-diabatic driving theories.
 
-\subsection{QAOA Applied to Factorization (Standard Protocol)}
-The Quantum Approximate Optimization Algorithm can be viewed as a shortcut to adiabaticity. Rather than performing a slow, continuous evolution, QAOA uses a fixed-depth quantum circuit composed of alternating unitaries derived from the mixing and problem Hamiltonians. The parameters of these unitaries are optimized variationally to prepare a state that approximates the solution.
+\subsubsection{QAOA for Standard Adiabatic Factorization}
+In some sense, we can say that QAOA can be viewed as a shortcut to adiabaticity implemented in the circuit model for quantum computation. Rather than performing a slow, continuous evolution, QAOA uses a fixed-depth quantum circuit composed of alternating unitaries derived from the mixing and problem Hamiltonians. The parameters of these unitaries are optimized variationally to prepare a state that approximates the solution.
 
 Díez-Valle et al.~\cite{diez-valle_universal_2025} demonstrate that QAOA and quantum annealing share fundamental structural features. Their results provide strong evidence that smooth annealing paths can be reconstructed from the optimal parameters of QAOA, reinforcing the view of QAOA as a digitized, variationally optimized form of adiabatic evolution.
 
-In summary, the ingredients to build and execute the QAOA algorithm applied to integer factorization --or what we will call the ``\texttt{standard} protocol''-- are:
+In summary, the ingredients to build and execute the QAOA algorithm applied to integer factorization --- or what we will call the ``\texttt{standard} protocol'' --- are:
 \begin{itemize}
     \item A Hamiltonian $\hat{H}_\mathrm{QP}$ (Eq.~\ref{eq:quadratic_problem_hamiltonian}) that encodes the solution to the factorization problem in its ground state.
     \item A mixing Hamiltonian $\hat{H}_\mathrm{M}$ that does not commute with $\hat{H}_\mathrm{QP}$, e.g., Eq.~\ref{eq:mixing_hamiltonian}.
@@ -102,9 +104,7 @@ the part corresponding to $b_{ij} \hat{\sigma}^z_i \hat{\sigma}^z_j$ is
         &= R_{ZZ} (2 \gamma b_{ij})\,,
     \end{split}
 \end{equation}
-and so on for the higher-order terms. Similarly, the mixing Hamiltonian $\hat{H}_\mathrm{M}$ gives rise to
-individual X-rotations at the end of each QAOA layer. With all this, one constructs the QAOA circuit, as shown
-in Fig.~\ref{fig:standard_circuit}.
+and so on for the higher-order terms. Similarly, the mixing Hamiltonian $\hat{H}_\mathrm{M}$ gives rise to individual X-rotations at the end of each QAOA layer. With all this, one constructs the QAOA circuit --- such as the circuit shown in Fig.~\ref{fig:standard_circuit} used for factorization of the number $N=35$.
 
 \begin{figure}[h]
     \centering
@@ -114,15 +114,12 @@ in Fig.~\ref{fig:standard_circuit}.
     \label{fig:standard_circuit}
 \end{figure}
 
-A related study by Anschuetz et al.~\cite{anschuetz_variational_2018} applies a similar method, combined with additional preprocessing and simplifications, to factor numbers as large as $291311$. Building on this idea, Karamlou et al.~\cite{karamlou_analyzing_2021} used classical preprocessing heuristics to factor $1099551473989$, $3127$, and $6557$ using only $3$, $4$, and $5$ qubits, respectively. In contrast, our goal is not to optimize for specific instances, but rather to analyze the general, standard approach to quantum factorization without relying on ad-hoc techniques.
+A related study by Anschuetz et al.~\cite{anschuetz_variational_2018} applies a similar method, combined with additional preprocessing and simplifications, to factor numbers as large as $291311$. Building on this idea, Karamlou et al.~\cite{karamlou_analyzing_2021} used classical preprocessing heuristics to factor $1099551473989$, $3127$, and $6557$ using only $3$, $4$, and $5$ qubits, respectively. In contrast, our goal is not to optimize for specific instances, but rather to analyze the general, standard approach to quantum factorization without relying on ad-hoc techniques. The motivatioin comes from establishing a broadly applicable framework, valid for any input $N$, while avoiding the need for modifications to the underlying factorization algorithm.
 
-\subsection{Our proposal (Linearized Protocol)}
+\subsection{QAOA for Linearized Adiabatic Factorization}
 As mentioned in the introduction to Section~\ref{Section:AFA}, the adiabatic factorization algorithm
 needs to deal with the difficulty of implementing three- and four-body interaction terms. In the 
-digitized version of this problem, like QAOA, this difficulty is transformed into three- and
-four-qubit gates (Fig.~\ref{fig:standard_circuit}),
-which need to be decomposed into multiple two-qubit gates (Fig.~\ref{fig:gate_decomposition}),
-leading to lower fidelities at the end of the quantum circuit.
+digitized version of this problem, like QAOA, this difficulty is bypassed by assuming that all three- and four- qubit gates --- see e.g. Fig.~\ref{fig:standard_circuit} --- can be efficiently implemented in a digital computer. However, for universal computers available so far, these gates are not efficiently implemented and we need to decompose them in multiple two-qubit gates, as shown in Fig.~\ref{fig:gate_decomposition}, what might result in lower fidelities at the end of the quantum circuit in a real scenario.
 
 \begin{figure}[h]
     \centering
