--- a/thesis/03-methodology/01-InitialState.tex
+++ b/thesis/03-methodology/01-InitialState.tex
@@ -1,4 +1,4 @@
-\section{Initial State}
+\subsection{Initial State}
 \label{Section:InitialState}
 
 In line with the adiabatic theorem, which states that a quantum system prepared in an eigenstate of a slowly varying Hamiltonian will remain in its instantaneous eigenstate, we aim to initialize the system in an eigenstate of the mixing Hamiltonian $\hat{H}_\mathrm{M}$. Ideally, this initial state should occupy a similar region of the spectrum as the target solution under the problem Hamiltonian $\hat{H}_\mathrm{P}$, so that the variational evolution requires minimal spectral “rearrangement.” The specific choice of initial state depends on the protocol used:
