--- a/thesis/03-methodology/03-ParameterInitialization.tex
+++ b/thesis/03-methodology/03-ParameterInitialization.tex
@@ -1,7 +1,7 @@
-\section{Parameter initialization}
-\label{Section:ParameterInitialization}
+% \subsection{Parameter initialization}
+% \label{Section:ParameterInitialization}
 
-As discussed in Sec.~\ref{Section:IncrementalApproach}, adding a new QAOA layer requires a suitable heuristic to initialize the additional variational parameters. Beyond random initialization, two specific strategies have been considered in this work:
+As aforementioned, adding a new QAOA layer requires a suitable heuristic to initialize the additional variational parameters. Beyond random initialization, two specific strategies have been considered in this work:
 
 \begin{itemize}
     \item \textbf{Parameter interpolation.}  
